fix dark mode toggle switch to appear at correct area

--- a/gameFrontend/style/style.css
+++ b/gameFrontend/style/style.css
@@ -54,7 +54,7 @@ h2 {
 #light-toggle {
   z-index: 1;
   position: absolute;
-  top: 82%;
+  top: 73%;
   right: 11%;
 }
 
